added the main section

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
   <main>
     <div class="main-wrapper">
       <div class="main-container">
-        <div class="main-img">
-          <img class="img-main" src="./image/tomatoes.png" alt="Tomatoe-pics">
+        <div class="main-img" >
+          <img class="img-tomatoe" src="./image/tomatoes.png" alt="Tomatoe-pics">
         </div>
         <div class="main-content">
           <h1 class="main-title">Our Methodology</h1>
