--- a/index.html
+++ b/index.html
@@ -112,6 +112,24 @@
     </div>
   </main>
 
+  <!-- section before footerr -->
+  <section >
+    <div class="section-footer">
+      <h1 class="section-footer-title">Our goal of science</h1>
+      <div class="section-image-wrapper">
+        <div class="desgnU-img">
+          <img class="designU" src="./image/designU-icon.png" alt="designU pic">
+        </div>
+        <div class="polaris-img">
+          <img class="polaris" src="./image/POLARIS 2.png" alt="polaris-img">
+        </div>
+        <div class="Nerdz-img">
+          <img class="Nerdz" src="./image/Nerdz-icon.png" alt="Nerdz-img">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
