--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<link rel="shortcut icon" type="image/png" href="./image/FARMER ASSIST 22222 2.png"/>
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Farm Assist | Homepage</title>
 </head>
 <body>
   <!-- Navigation bar -->
@@ -15,17 +16,17 @@
      <div class="nav-wrapper">
       <!-- farmer-logo -->
        <div class="nav-logo">
-        <img src="./image/FARMER ASSIST 22222 2.png" alt="farmer-logo">
+        <img class="logo" src="./image/FARMER ASSIST 22222 2.png" alt="farmer-logo">
        </div>
        <nav class="nav-wrapper">
        <div class="nav-list">
         <ul class="nav-container">
-          <li class="nav-list"><a href="#">Home</a></li>
-          <li class="nav-list"><a href="#">Login</a></li>
-          <li class="nav-list"><a href="#">Register</a></li>
-          <li class="nav-list"><a href="#">About</a></li>
-          <li class="nav-list"><a href="#">Product</a></li>
-          <li class="nav-list"><a href="#">Contact us</a></li>
+          <li class="nav-list"><a href="index.html">Home</a></li>
+          <li class="nav-list"><a href="login.html">Login</a></li>
+          <li class="nav-list"><a href="register.html">Register</a></li>
+          <li class="nav-list"><a href="about.html">About</a></li>
+          <li class="nav-list"><a href="product.html">Product</a></li>
+          <li class="nav-list"><a href="contact.html">Contact us</a></li>
         </ul>
        </div>
       </nav>
@@ -134,23 +135,23 @@
     <div class="last-section">
       <div class="last-wrapper">
         <ul>
-          <li class="footer-list"><a href=""></a>FAQ</li>
-          <li class="footer-list"><a href=""></a>Term of service</li>
-          <li class="footer-list"><a href=""></a>Privacy</li>
-          <li class="footer-list"><a href=""></a>cookies</li>
-          <li class="footer-list"><a href=""></a>Blog</li>
-          <li class="footer-list"><a href=""></a>Intergration</li>
-          <li class="footer-list"><a href=""></a>Contact</li>
+          <li class="footer-list"><a href="#"></a>FAQ</li>
+          <li class="footer-list"><a href="#"></a>Term of service</li>
+          <li class="footer-list"><a href="#"></a>Privacy</li>
+          <li class="footer-list"><a href="#"></a>cookies</li>
+          <li class="footer-list"><a href="#"></a>Blog</li>
+          <li class="footer-list"><a href="#"></a>Intergration</li>
+          <li class="footer-list"><a href="#"></a>Contact</li>
         </ul>
       </div>
 
       <div class="followus-wrapper">
         <h3>Follow us on </h3>
         <div class="followus-container">
-          <div class="twitter-icon"><a href="#"><img src="./image/twitter-icon.png" alt="twitter-icon"></a></div>
-          <div class="linkeIn-icon"><a href="#"><img src="./image/linkeIn-icon.png" alt="linkien-icon"></a></div>
-          <div class="instalgram-icon"><a href="#"><img src="./image/instagram-icon.png" alt="instalgram-icon"></a></div>
-          <div class="fbook-icon"><a href="#"><img src="./image/facebook-icon.png" alt="facebook-icon"></a></div>
+          <div class="twitter-icon"><a href="#"><img class="icon" src="./image/twitter-icon.png" alt="twitter-icon"></a></div>
+          <div class="linkeIn-icon"><a href="#"><img class="icon" src="./image/linkeIn-icon.png" alt="linkien-icon"></a></div>
+          <div class="instalgram-icon"><a href="#"><img class="icon" src="./image/instagram-icon.png" alt="instalgram-icon"></a></div>
+          <div class="fbook-icon"><a href="#"><img class="icon" src="./image/facebook-icon.png" alt="facebook-icon"></a></div>
         </div>
       </div>
 
