fixing every responsive issues

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,8 @@
    <h1 class="contact">Contact Us</h1>
    
    <div class="form-wrapper">
-     <div class="form-img"><img class="map-img" src="./image/Map.png" alt="Map-img"></div>
+     <div class="form-img"><img class="map-img" src="./image/Map.png" alt="Map-img">
+    </div>
 
      <div class="form">
       <form action="#">
@@ -92,7 +93,6 @@
 
   <footer>
     <div class="footer-wrapper">
-      <!-- <img class="footer-logo" src="./image/FARMER ASSIST 22222 2.png" alt="farmer-logo"> -->
       <h4>©2023. FarmAssist. All Right Reserved</h4>
     </div>
   </footer>
