--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
        <div class="nav-logo">
         <img class="logo" src="./image/FARMER ASSIST 22222 2.png" alt="farmer-logo">
        </div>
+
        <nav class="nav-wrapper">
        <div class="nav-list">
         <ul class="nav-container">
@@ -148,8 +149,8 @@
       <div class="followus-wrapper">
         <h3>Follow us on </h3>
         <div class="followus-container">
-          <div class="twitter-icon"><a href="#"><img class="icon" src="./image/twitter-icon.png" alt="twitter-icon"></a></div>
-          <div class="linkeIn-icon"><a href="#"><img class="icon" src="./image/linkeIn-icon.png" alt="linkien-icon"></a></div>
+          <div class="twitter-icon"><a href="https://twitter.com/Uwaoma2Obinna"><img class="icon" src="./image/twitter-icon.png" alt="twitter-icon"></a></div>
+          <div class="linkeIn-icon"><a href="https://www.linkedin.com/in/obinna-uwaoma-61730582/"><img class="icon" src="./image/linkeIn-icon.png" alt="linkien-icon"></a></div>
           <div class="instalgram-icon"><a href="#"><img class="icon" src="./image/instagram-icon.png" alt="instalgram-icon"></a></div>
           <div class="fbook-icon"><a href="#"><img class="icon" src="./image/facebook-icon.png" alt="facebook-icon"></a></div>
         </div>
