--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
           You can put a sample text between the  to preview how it looks after styling --></div>
         </div>
 
-    <form id="registerForm" method="post" action="">
+    <form id="registerForm" method="post" action="./auth/register.php">
       <label for="Name">Enter Full Name</label><sup>*</sup><br/>
       <input type="text" placeholder="Enter Full Name" name="name" id="txt-name" class="Name"  ><br/>
 
@@ -69,7 +69,7 @@
   </div>
  </div>
  <script src="/js/jquery.js"></script>
- <script src="/js/main.js"></script>
+ <script src="./js/main.js"></script>
 
 </body>
 </html>
