--- a/login.html
+++ b/login.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link rel="shortcut icon" type="image/png" href="./image/FARMER ASSIST 22222 2.png"/>
-  <link rel="stylesheet" href="login.css">
-  <title>Login page</title>
-</head>
-<body>
-  <div class="nav-logo">
-    <img class="logo" src="./image/FARMER ASSIST 22222 2.png" alt="farmer-logo">
-   </div>
-  <!-- form container -->
-  <div class="form-wrapper">
-    <h1 class="account">Login to your account</h1>
-    <h1 class="E-content">Email/Phone number</h1>
-
-    <div class="form-content">
-    <form>
-      <label for="email">Enter your email</label><sup>*</sup><br/>
-      <input type="text" placeholder="Enter email" class="Email" required><br/>
-
-      <label for="email">Password</label><sup>*</sup><br/>
-      <input type="text" placeholder="Password" class="password" required><br/>
-      <p><a href="forgetpword.html">Forget password or change phone number</a></p>
-       <div class="button-wrapper">
-      <button class="acct-btn">Login</button>
-      <button class="Reg-acct"><a href="register.html">Dont have  an account? Register Today</a></button>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./image/FARMER ASSIST 22222 2.png"
+    />
+    <link rel="stylesheet" href="login.css" />
+    <title>Login page</title>
+  </head>
+  <body>
+    <div class="nav-logo">
+      <img
+        class="logo"
+        src="./image/FARMER ASSIST 22222 2.png"
+        alt="farmer-logo"
+      />
     </div>
-    </form>
-  </div>
- </div>
-</body>
+    <!-- form container -->
+    <div class="form-wrapper">
+      <h1 class="account">Login to your account</h1>
+      <h1 class="E-content">Email/Phone number</h1>
+
+      <div class="form-content">
+        <form action="./auth/login.php" method="post">
+          <label for="email">Enter your email</label><sup>*</sup><br />
+          <input
+            type="text"
+            placeholder="Enter email"
+            class="Email" name="loginId"
+            required
+          /><br />
+
+          <label for="email">Password</label><sup>*</sup><br />
+          <input
+            type="text"
+            placeholder="Password"
+            class="password" name="password"
+            required
+          /><br />
+          <p>
+            <a href="forgetpword.html"
+              >Forget password or change phone number</a
+            >
+          </p>
+          <div class="button-wrapper">
+            <button class="acct-btn" name="login">Login</button>
+            <button class="Reg-acct">
+              <a href="register.html">Dont have an account? Register Today</a>
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
