added some link

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         <div class="followus-container">
           <div class="twitter-icon"><a href="https://twitter.com/Uwaoma2Obinna"><img class="icon" src="./image/twitter-icon.png" alt="twitter-icon"></a></div>
           <div class="linkeIn-icon"><a href="https://www.linkedin.com/in/obinna-uwaoma-61730582/"><img class="icon" src="./image/linkeIn-icon.png" alt="linkien-icon"></a></div>
-          <div class="instalgram-icon"><a href="#"><img class="icon" src="./image/instagram-icon.png" alt="instalgram-icon"></a></div>
-          <div class="fbook-icon"><a href="#"><img class="icon" src="./image/facebook-icon.png" alt="facebook-icon"></a></div>
+          <div class="instalgram-icon"><a href="http://www.instagram.com/Independence91" target="_blank"><img class="icon" src="./image/instagram-icon.png" alt="instalgram-icon"></a></div>
+          <div class="fbook-icon"><a href="https://www.facebook.com/ighoruona.independence.5" target="_blank" ><img class="icon" src="./image/facebook-icon.png" alt="facebook-icon"></a></div>
         </div>
       </div>
 
