--- a/login.html
+++ b/login.html
@@ -44,7 +44,8 @@
             required
           /><br />
           <p>
-            <a href="forgetpword.html"
+            <!-- Updated the link to reset password.. Previous one was for phone number change -->
+            <a href="resetPass.php"
               >Forget password or change phone number</a
             >
           </p>
