--- a/login.html
+++ b/login.html
@@ -50,13 +50,12 @@
             >
           </p>
           <div class="button-wrapper">
-            <button class="acct-btn" name="login">Login</button>
-            <button class="Reg-acct">
-              <a href="register.html">Dont have an account? Register Today</a>
-            </button>
+            <button type="submit" class="acct-btn" name="login">Login</button>
+            <button type="submit" class="Reg-acct" > <a href="register.html">Dont have an account? Register Today</a> </button>
           </div>
         </form>
       </div>
     </div>
+    <script></script>
   </body>
 </html>
